--- a/homework3/src/index.html
+++ b/homework3/src/index.html
@@ -6,7 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/063556e09d.js" crossorigin="anonymous"></script>
+
 </head>
+
+<style>
+  /*Basic reset*/
+  body{
+    margin:0;
+    padding: 0;
+  }
+</style>
 <body>
   <app-root></app-root>
 </body>
